--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,18 @@ authors = [{ name = "Laurent-Philippe Albou" }]
 
 dependencies = [
   "abstractruntime>=0.4.0",
+]
+
+[project.optional-dependencies]
+# Runner-only deployments (no HTTP stack).
+runner = []
+
+# HTTP API deployments (FastAPI + Uvicorn).
+http = [
   "fastapi>=0.100.0",
   "uvicorn[standard]>=0.23.0",
 ]
 
-[project.optional-dependencies]
 # Optional support for starting runs from VisualFlow JSON (compiled via AbstractFlow).
 visualflow = [
   "abstractflow>=0.3.0",
@@ -29,6 +36,8 @@ telegram = [
 dev = [
   "pytest>=7.0.0",
   "httpx>=0.27.0",
+  "fastapi>=0.100.0",
+  "uvicorn[standard]>=0.23.0",
 ]
 
 [project.scripts]
@@ -39,4 +48,3 @@ abstractgateway = "abstractgateway.cli:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/abstractgateway"]
-
