--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "abstractgateway"
-version = "0.1.1"
+version = "0.2.0"
 description = "AbstractGateway: deployable Run Gateway host for AbstractRuntime (commands + ledger)."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -12,16 +12,19 @@ license = { text = "MIT" }
 authors = [{ name = "Laurent-Philippe Albou" }]
 
 dependencies = [
-  "abstractruntime>=0.4.0",
+  "AbstractRuntime>=0.4.0",
 ]
 
 [project.optional-dependencies]
 # Runner-only deployments (no HTTP stack).
 runner = []
 
-# HTTP API deployments (FastAPI + Uvicorn).
+# HTTP API deployments (FastAPI + Uvicorn + AbstractCore integration).
 http = [
+  "AbstractRuntime[abstractcore]>=0.4.0",
+  "abstractagent>=0.3.0",
   "fastapi>=0.100.0",
+  "python-multipart>=0.0.6",
   "uvicorn[standard]>=0.23.0",
 ]
 
@@ -36,7 +39,10 @@ telegram = [
 dev = [
   "pytest>=7.0.0",
   "httpx>=0.27.0",
+  "AbstractRuntime[abstractcore]>=0.4.0",
+  "abstractagent>=0.3.0",
   "fastapi>=0.100.0",
+  "python-multipart>=0.0.6",
   "uvicorn[standard]>=0.23.0",
 ]
 
